@@ -95,7 +95,6 @@ teditor_edit_side::teditor_edit_side(int side,
 void teditor_edit_side::pre_show(CVideo& /*video*/, twindow& window)
 {
 	register_controller_toggle(window, "human", team::HUMAN);
-	register_controller_toggle(window, "human_ai", team::HUMAN_AI);
 	register_controller_toggle(window, "ai", team::AI);
 	register_controller_toggle(window, "null", team::EMPTY);
 	register_controller_toggle(window, "number", team::CONTROLLER(-1));
